manifests/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-api
  template:
    metadata:
      labels:
        app: appointment-api
    spec:
      containers:
        - name: appointment-api
          imagePullPolicy: Never
          image: kube-api
          # resources:
          #   limits:
          #     memory: 500M
          #     cpu: "0.5"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-api-service
spec:
  selector:
    app: appointment-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
