manifests/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-client
  template:
    metadata:
      labels:
        app: appointment-client
    spec:
      containers:
        - name: appointment-client
          imagePullPolicy: Never
          image: kube-client
          # resources:
          #   limits:
          #     memory: 500M
          #     cpu: 0.5M
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-client-service
spec:
  selector:
    app: appointment-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
