manifests/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-nginx
  template:
    metadata:
      labels:
        app: appointment-nginx
    spec:
      containers:
        - name: appointment-nginx
          imagePullPolicy: Always
          image: dockterperry/appointment-nginx:v1
          ports:
            - containerPort: 300
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-nginx-service
spec:
  selector:
    app: appointment-nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
